pl 11.uu1
	- changed debug init code.

pl 11.jcn2
	- bf: LDFLAGS=foo CFLAGS=bar ./configure
	- bf: configure (--disable-printing = default) -DNPRINT
	- bf: mf-to-xpms / make -C mf xpms; feta-accordion is broken,
	  see mf/README

pl 11.jcn1
	- gnossiene with new \autochange

pl 11.jbr1
        - Tried to get rid of path and switch dependencies in mf
          build process.

pl 11.hwn1
	- doco reorganisation: folded glossary and tutorial into manual.
	- move mudela-book-doc to texinfo
	- feta.tex to mf/
	- release.py, package-diff.py now dump into out/


****
pl 10.hwn1
	- Auto_change_music, Auto_change_iterator: auto staff
switching. 2nd try.  See input/test/auto-change.ly

pl 10.uu1
	- doc restructure: hacking.texi
	- make & install .pfas
	- updates: faq.texi
	- rpm fixes.
	- Windows fixes (9.jbr)

******
pl 9.rrr1
	- abc2ly bug fixes and extensions
	- volta spanner given height to avoid collisions

pl 9.jcn2
	- 2.95 fixes
	- input/test/different-time-signatures.ly (wasn't this in refman?)

pl 9.hwn1
	- fixes for mi2mu
	- bf: staff-side with empty parent.
	- bf:
Hara_kiri_vertical_group_spanner::do_substitute_element_pointer has to
call Axis_group_spanner::do_substitute_element_pointer.  Fixes
harakiri & barline problem.
	- junk: Spring_spacer, Ineq_constrained_qp, Mixed_qp,
Active_constraints, Inactive_iter, Matrix, Vector,
Choleski_decomposition, Full_storage


pl 9.jcn1
	- included last Localisation.texi
	- set-lily: de catalog too

*******
pl 8.hwn1
	- Erwin Dieterich: german translation.
	- dependency helper funcs simplified.
	- junk breaking stats.
	- cleanups: Line_of_score also is X_AXIS group. Score_columns
are put into Line_of_score of score.

pl 8.jcn2
	- scripts/mudela-book.py: use hash of full .ly contents (by default)
	- bf: footify html doc upon creation too

pl 8.jcn1
	- Documentation/Localisation.texi: still some issues
	- Uniformised locale strings
	- marked some errors/warnings without _/_f markings