@@ -1,3 +1,6 @@
+pl 12.jcn1
+	- auto-knees, input/test/auto-knee.ly
+
 pl 11.uu1
 	- changed debug init code.
 
